--- a/src/mancala/pkg1/pkg0/MainMenuPanel.form
+++ b/src/mancala/pkg1/pkg0/MainMenuPanel.form
@@ -59,7 +59,7 @@
               <Font name="Tahoma" size="24" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="MANCALA GAME"/>
+            <Property name="text" type="java.lang.String" value="The Mancala Effect"/>
           </Properties>
         </Component>
       </SubComponents>
