--- a/src/mancala/pkg1/pkg0/GameBoardPanel.form
+++ b/src/mancala/pkg1/pkg0/GameBoardPanel.form
@@ -426,6 +426,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="New Game"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="newGameButtonActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="mainMenuButton">
               <Properties>
