--- a/src/mancala/pkg1/pkg0/MainMenuPanel.form
+++ b/src/mancala/pkg1/pkg0/MainMenuPanel.form
@@ -26,7 +26,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="titleLabel" alignment="0" pref="707" max="32767" attributes="0"/>
+              <Component id="titleLabel" alignment="0" pref="1234" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -70,15 +70,15 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="playGameButtonActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="howToPlayButton">
+        <Component class="javax.swing.JButton" name="aboutMancalaButton">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="How To Play"/>
+            <Property name="text" type="java.lang.String" value="About Mancala"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="howToPlayButtonActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="aboutMancalaButtonActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="optionsButton">
